[package]
name = "rust-backend-test"
version = "0.1.0"
authors = ["ikechukwu <iykekings36@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"


# rocket = { path = "../../core/lib" }
# serde = "1.0"
# serde_json = "1.0"
# serde_derive = "1.0"

# [dependencies.rocket_contrib]
# path = "../../contrib/lib"
# default-features = false
# features = ["json"]